--- a/_posts/2017-09-28-india-transportation-accidents-exploration-project/india-transportation-accidents-exploration-project.Rmd
+++ b/_posts/2017-09-28-india-transportation-accidents-exploration-project/india-transportation-accidents-exploration-project.Rmd
@@ -5,6 +5,7 @@ description: |
 author:
   - name: Aditya Mangal
     url: https://www.linkedin.com/in/adityamangal410/
+preview: https://lh3.googleusercontent.com/fruMUvRzmWjXTG00Bk3TNfbHfTBDEgWQcK2L9Feb7tQM0FCzSk8o-DybzHccDP0PrBljq2y9X-GZuRTQXrat5_D_y3S1amU22CXBo-UPzr7RPGLkRl_53xksS_dtB3A-TCbqHTwOrOufikQznE7-7X8AtMrM53cHCJnR99ob7h8v_CEEQLOdje2DCBwblUtr4Mofna7vFWo7x7vRapU5pcyigJI6Qahne2vYAQiCjXP1lr8vJUN2a4C9mbr9xqDzH2UaNsZwuqsr53lhusfa-e8EhD0gTMZdL0FACu2McPJNDnJEeBG4dMbdB5IscN6w6Z6577nnSu0nTk0AibdUuI429JGQB2nPFZqLfk5uNKOGd4txq6ZJZifE11L9qyoXIw7WGGPC37qkQPYA5hKuGSfUZGG-VixKWX0AU0FI219exef5i5eo4yDyTn2dLiDJprA6MwEm_31a4aA_pbIgGR1O6HML3xCaManQAOv-7N0m1t2X3IwfSj7yq2hSydvQIoiCg7tb5ifPgVSrgWAvN64Jwp2AADJU_a16fIyO5HXv2XFURXEpsKj4sr9zzFDLMdY3wE6yip0vnH09xumEYNyvOEp2zkC2jPYGP5MPCgYSOpwnFLpLPxy49RFKbXMTHtS8XKFiuxH6b_gpPqPUOLwgASVOm_aH=w750-h498-no
 date: 09-28-2017
 output:
   distill::distill_article:
@@ -15,10 +16,6 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
-
-# Project Summary
-
-With this project I will try to visualize and understand the traffic accident data for India as publicly accessible [here](https://data.gov.in/). 
 
 # Project Goals
 
