--- a/_posts/2019-04-16-economists-visualization-mistakes-tidytuesday-apr-16-2019/economists-visualization-mistakes-tidytuesday-apr-16-2019.Rmd
+++ b/_posts/2019-04-16-economists-visualization-mistakes-tidytuesday-apr-16-2019/economists-visualization-mistakes-tidytuesday-apr-16-2019.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Economist''s Visualization Mistakes: TidyTuesday Apr 16 2019"
+title: "Economist's Visualization Mistakes: TidyTuesday Apr 16 2019"
 description: |
   Redrawing Economist's erroneous visualizations as described here - Mistakes,
   we’ve drawn a few
